# verde

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindLibEvent.cmake  FindLibevent.cmake  FindZookeeper.cmake
examples/: CMakeLists.txt  main.c
verde/: verde.c  verde.h
